<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_house"
        android:title="@string/nav_label_home"/>

    <item
        android:id="@+id/nav_register"
        android:icon="@drawable/ic_book_open"
        android:title="@string/nav_label_register"/>

    <item
        android:id="@+id/nav_schedule"
        android:icon="@drawable/ic_calendar"
        android:title="@string/nav_label_schedule"/>

    <item
        android:id="@+id/nav_result"
        android:icon="@drawable/ic_graduation_cap"
        android:title="@string/nav_label_result"/>

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/nav_label_profile"/>

</menu>